[package]
name = "ls-proxy"
version = "0.1.0"
authors = ["Philippe Vlérick pvlerick@gmail.com"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ls-proxy"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = "0.7.10"
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
